Add more meta tags to <head>

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -2,4 +2,12 @@
 
 {% block extrahead %}
     <meta name="theme-color" content="#108761">
+    <meta name="application-name" content="Marvin's Digital Garden">
+    <meta name="robots" content="index,follow">
+    <meta name="googlebot" content="index,follow">
+    <meta name="rating" content="General">
+    <meta name="referrer" content="no-referrer">
+
+    <link rel="license" href="/license/">
+    <link rel="me" href="mailto:contact@marvin-elsen.com">
 {% endblock %}
