Fix icons for webmanifest

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -10,4 +10,5 @@
 
     <link rel="license" href="/license/">
     <link rel="me" href="mailto:contact@marvin-elsen.com">
+    <link rel="mask-icon" href="images/favicon.svg" color="#108761">
 {% endblock %}
