--- a/overrides/main.html
+++ b/overrides/main.html
@@ -11,4 +11,5 @@
     <link rel="license" href="/license/">
     <link rel="me" href="mailto:contact@marvin-elsen.com">
     <link rel="mask-icon" href="images/favicon.svg" color="#108761">
+    <link rel="apple-touch-icon" href="images/favicon_192px.png">
 {% endblock %}
