--- a/overrides/main.html
+++ b/overrides/main.html
@@ -10,7 +10,7 @@
 
     <link rel="license" href="/license/">
     <link rel="me" href="mailto:contact@marvin-elsen.com">
-    <link rel="mask-icon" href="images/favicon.svg" color="#108761">
-    <link rel="apple-touch-icon" href="images/favicon_192px.png">
-    <meta name="color-scheme" content="light dark">
+    <link rel="mask-icon" href="assets/images/favicon.svg" color="#108761">
+    <link rel="apple-touch-icon" href="assets/images/favicon_192px.png">
+    <meta name="color-scheme" content="light">
 {% endblock %}
