Meta: Convert relative to absolute paths

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -10,13 +10,13 @@
 
     <link rel="license" href="/meta/license/">
     <link rel="me" href="mailto:contact@marvin-elsen.com">
-    <link rel="mask-icon" href="assets/images/favicon.svg" color="#108761">
-    <link rel="apple-touch-icon" href="assets/images/favicon_192px.png">
+    <link rel="mask-icon" href="/assets/images/favicon.svg" color="#108761">
+    <link rel="apple-touch-icon" href="/assets/images/favicon_192px.png">
     <meta name="color-scheme" content="light">
 	
 	<!-- RSS Feed -->
-	<link rel="alternate" type="application/rss+xml" title="RSS feed of created content" href="{{ config.site_url }}feed_rss_created.xml">
-	<link rel="alternate" type="application/rss+xml" title="RSS feed of updated content" href="{{ config.site_url }}feed_rss_updated.xml">
+	<link rel="alternate" type="application/rss+xml" title="RSS feed of created content" href="{{ config.site_url }}/feed_rss_created.xml">
+	<link rel="alternate" type="application/rss+xml" title="RSS feed of updated content" href="{{ config.site_url }}/feed_rss_updated.xml">
 {% endblock %}
 
 {% block content %}
